added about us page, made some animations

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/logo fit .png" type="image/x-icon">
     <title>Livins Furniture</title>
 </head>
 
 <body>
-    <nav class="navbar p-0 navbar-dark navbar-expand-md">
+    <nav class="navbar p-3 navbar-dark navbar-expand-md">
         <div class="container p-0">
-            <img class="navbar-brand p-0" src="assets/logo .png" alt="">
+            <img class="navbar-brand p-0" src="assets/logo fit .png" alt="">
 
             <button class="navbar-toggler " aria-label="Expand Navigation" data-bs-toggle="collapse"
                 data-bs-target="#nav">
@@ -26,9 +27,11 @@
                 <ul class="navbar-nav nav ps-3">
                     <li class="nav-item"><a style="color: #868876;" class="nav-link active" href="#Home"
                             class="disabled">Home</a></li>
-                    <li class="nav-item"><a style="color: #868876;" class="nav-link active" href="http://">About Us</a>
+                    <li class="nav-item"><a style="color: #868876;" class="nav-link active" href="about us.html">About
+                            Us</a>
                     </li>
-                    <li class="nav-item"><a style="color: #868876;" class="nav-link active" href="http://">Contact
+                    <li class="nav-item"><a style="color: #868876;" class="nav-link active"
+                            href="contact us.html">Contact
                             Us</a></li>
                     <li class="nav-item"><a style="color: #868876;" class="nav-link active"
                             href="#store-sections">Store</a>
@@ -42,7 +45,7 @@
     <div class="container-fluid content">
         <div class="container-fluid p-0 " id="Home">
             <div class="row ps-5  align-items-center hero">
-                <!-- <img src="assets/hero temp.jpeg" alt=""> -->
+
                 <div class="col-lg-6">
                     <h1>Empowering Lives Through Livins Furniture</h1>
                     <p>Discover comfort, independence
@@ -54,9 +57,9 @@
         </div>
         <div class="container" id="store-sections">
             <h2 class="">Store sections</h2>
-            <div class=" row  ">
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card">
+            <div class=" row gy-3">
+                <div class="col-lg-4 col-md-6 col-sm-12 ">
+                    <div class="card store-section ">
                         <img src="assets/hero temp.jpeg" alt="">
                         <div class="card-body">
                             <div class="card-title">
@@ -70,7 +73,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card">
+                    <div class="card store-section">
                         <img src="assets/hero temp.jpeg" alt="">
                         <div class="card-body">
                             <div class="card-title">
@@ -84,7 +87,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 ">
-                    <div class="card">
+                    <div class="card store-section">
                         <img src="assets/hero temp.jpeg" alt="">
                         <div class="card-body">
                             <div class="card-title">
@@ -104,8 +107,8 @@
 
 
     <footer>
-        <img class="footer-img" src="assets/logo .png" alt="">
-        <div class="container">
+        <img class="footer-img p-3" src="assets/logo fit .png" alt="">
+        <!-- <div class="container">
             <div class="row justify-content-center text-md-center">
                 <div class="col-md-10">
                     <div class="row">
@@ -117,7 +120,7 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="18" width="18"
-                                                viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                                viewBox="0 0 512 512">
                                                 <path fill="#e47650" d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1
                                     30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1
                                     38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3
@@ -129,7 +132,7 @@
                                     </div>
                                     <div class="col-12">
                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" width="18"
-                                            viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                            viewBox="0 0 512 512">
                                             <path fill="#e47650" d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1
                                     30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1
                                     38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3
@@ -140,7 +143,7 @@
                                     </div>
                                     <div class="col-12">
                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" width="18"
-                                            viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                            viewBox="0 0 512 512">
                                             <path fill="#e47650" d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 
                                     19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 
                                     150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 
@@ -159,7 +162,7 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="18" width="18"
-                                                viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                                viewBox="0 0 512 512">
                                                 <path fill="#e47650"
                                                     d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 
                                             0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 
@@ -177,7 +180,7 @@
                                     </div>
                                     <div class="col-12">
                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" width="18"
-                                            viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                            viewBox="0 0 512 512">
                                             <path fill="#e47650"
                                                 d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 
                                             0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 
@@ -194,7 +197,7 @@
                                     </div>
                                     <div class="col-12">
                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" width="18"
-                                            viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                            viewBox="0 0 512 512">
                                             <path fill="#e47650"
                                                 d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z" />
                                         </svg>
@@ -206,11 +209,13 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+        <h6 style="text-align: center;">&copy; all copyrights reserved to Livins Furniture</h6>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
 </body>
+<script src="js/main.js"></script>
 
 </html>
