fixed inconsistances in the about us design

--- a/about us.html
+++ b/about us.html
@@ -47,48 +47,47 @@
         </div>
         <div class="container mt-4 p-4 who-are-we ">
             <div class="row ">
-                <div class="col-md-6 who-are-we-text col-sm-12 ">
+                <div class="col-xl-6 who-are-we-text col-sm-12 ">
                     <h2>Who Are We?</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid praesentium tempore neque
-                        laborum qui eveniet impedit ea quasi reiciendis itaque beatae repellat, quis similique libero
-                        harum maiores. Distinctio fugiat adipisci animi quis voluptate. Necessitatibus asperiores neque
-                        nemo, voluptatibus magnam nihil odio at fugit excepturi saepe amet, eaque, temporibus
-                        perferendis assumenda.</p>
+                    <p>At Livins Furniture, we use natural wood with flexible design and a great purpose. We specialize
+                        in creating thoughtfully crafted furniture specifically designed for people with disabilities,
+                        ensuring every piece combines functionality with comfort. Our mission is to enhance independence
+                        and quality of life through innovative, accessible furniture solutions that meet unique needs
+                        while maintaining beautiful craftsmanship.</p>
                 </div>
-                <div class="col-md-6 who-are-we-img col-sm-12">
+                <div class="col-xl-6 who-are-we-img col-sm-12">
                     <img src="assets/who are we.jpg" alt="">
                 </div>
             </div>
         </div>
         <div class="container mt-4 p-4 our-vision">
             <div class="row">
-                <div class="col-md-6 col-sm-12 our-vision-text">
+                <div class="col-xl-6 col-sm-12 our-vision-text">
                     <h2>Our Vission</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid praesentium tempore neque
-                        laborum qui eveniet impedit ea quasi reiciendis itaque beatae repellat, quis similique libero
-                        harum maiores. Distinctio fugiat adipisci animi quis voluptate. Necessitatibus asperiores neque
-                        nemo, voluptatibus magnam nihil odio at fugit excepturi saepe amet, eaque, temporibus
-                        perferendis assumenda..
+                        We believe that design isn't just about beauty—it's also about empowerment. True design goes
+                        beyond creating visually appealing aesthetics; it focuses on enabling people, solving problems,
+                        and making meaningful connections. When we design with purpose and intention, we create
+                        experiences that don't just look good, but actually transform lives and communities.
                     </p>
                 </div>
-                <div class="col-md-6 col-sm-12 our-vision-img">
+                <div class="col-xl-6 col-sm-12 our-vision-img">
                     <img src="assets/our vission.jpg" alt="">
                 </div>
             </div>
         </div>
         <div class="container mt-4 p-4 why-us">
             <div class="row">
-                <div class="col-md-6 col-sm-12 why-us-text">
+                <div class="col-xl-6 col-sm-12 why-us-text">
                     <h2>Why us?</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus veniam pariatur obcaecati
-                        veritatis maiores iusto repellendus excepturi magni quos fuga, similique quaerat impedit sed
-                        numquam dolor, ad modi voluptates, non saepe? Quae reiciendis non, explicabo totam enim neque,
-                        perferendis similique repellat architecto tempore culpa expedita est earum illum quod dolore.
+                        Because they deserve more than just furniture, they deserve a complete living experience. It’s
+                        not only about filling a space — it’s about offering comfort, freedom of movement, and
+                        effortless control. Our furniture is designed to adapt, support, and respond, giving your loved
+                        ones the quality of life they truly deserve.
                     </p>
                 </div>
-                <div class="col-md-6 col-sm-12 why-us-img">
+                <div class="col-xl-6 col-sm-12 why-us-img">
                     <img src="assets/why us.jpg" alt="">
                 </div>
             </div>
@@ -114,6 +113,7 @@
                 </div>
             </div>
         </div>
+        <br><br>
     </div>
 
     <footer>
